--- a/repositorio.html
+++ b/repositorio.html
@@ -29,44 +29,27 @@
                 <div class="item__list">
                     <i class="uil uil-cloud"></i>
                     <h4>Doc. Cloud</h4>
-                    <a>Acesse Aqui</a>
+                    <a href="google.com" target="_blank">Acesse Aqui</a>
                 </div>
 
                 <div class="item__list">
                     <i class="uil uil-server-network-alt"></i>
                     <h4>Doc. Redes</h4>
-                    <a>Acesse Aqui</a>
+                    <a href="google.com" target="_blank">Acesse Aqui</a>
                 </div>
 
                 <div class="item__list">
                     <i class="uil uil-box"></i>
                     <h4>Packet Tracer</h4>
-                    <a>Acesse Aqui</a>
+                    <a href="google.com" target="_blank">Acesse Aqui</a>
                 </div>
 
                 <div class="item__list">
                     <i class="uil uil-constructor"></i>
                     <h4>Plantas</h4>
-                    <a>Acesse Aqui</a>
+                    <a href="google.com" target="_blank">Acesse Aqui</a>
                 </div>
-
-                <div class="item__list">
-                    <i class="uil uil-cloud"></i>
-                    <h4>Doc Cloud</h4>
-                    <a>Acesse Aqui</a>
-                </div>
-
-                <div class="item__list">
-                    <i class="uil uil-cloud"></i>
-                    <h4>Doc Cloud</h4>
-                    <a>Acesse Aqui</a>
-                </div>
-
-                <div class="item__list">
-                    <i class="uil uil-cloud"></i>
-                    <h4>Doc Cloud</h4>
-                    <a>Acesse Aqui</a>
-                </div>
+                
             </div>
         </section>
         <footer>
