--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <main>
         <section class="login__registro">
             <nav class="Inicio">
-                <a href="Index.html" class="logo">PathFinders<span>Nets</span></a><!--Logo-->
+                <a href="index.html" class="logo">PathFinders<span>Nets</span></a><!--Logo-->
             </nav>
 
             <div class="container__login__registro">
