--- a/repositorio.html
+++ b/repositorio.html
@@ -17,7 +17,7 @@
     <main>
         <section class="repositorio">
             <nav class="Inicio">
-                <a href="Index.html" class="logo">PathFinders<span>Nets</span></a><!--Logo-->
+                <a href="index.html" class="logo">PathFinders<span>Nets</span></a><!--Logo-->
             </nav>
 
             <div class="titulo">
@@ -49,7 +49,7 @@
                     <h4>Plantas</h4>
                     <a href="google.com" target="_blank">Acesse Aqui</a>
                 </div>
-                
+
             </div>
         </section>
         <footer>
