--- a/repositorio.html
+++ b/repositorio.html
@@ -35,7 +35,7 @@
                 <div class="item__list">
                     <i class="uil uil-server-network-alt"></i>
                     <h4>Doc. Redes</h4>
-                    <a href="google.com" target="_blank">Acesse Aqui</a>
+                    <a href="https://www.canva.com/design/DAFjmI1tHUA/bE7PTZkvknF93d4twlS6pQ/view?utm_content=DAFjmI1tHUA&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Acesse Aqui</a>
                 </div>
 
                 <div class="item__list">
