--- a/repositorio.html
+++ b/repositorio.html
@@ -41,13 +41,13 @@
                 <div class="item__list">
                     <i class="uil uil-box"></i>
                     <h4>Packet Tracer</h4>
-                    <a href="google.com" target="_blank">Acesse Aqui</a>
+                    <a href="https://drive.google.com/file/d/18A-dfWJlGMFh3M72qIEaQeGkWRUP5Ft1/view?usp=sharing" target="_blank">Acesse Aqui</a>
                 </div>
 
                 <div class="item__list">
                     <i class="uil uil-constructor"></i>
                     <h4>Plantas</h4>
-                    <a href="google.com" target="_blank">Acesse Aqui</a>
+                    <a href="https://drive.google.com/drive/folders/1EZ8wIMBLK4DhnJKwRELE1rZ0TwmZN-C4?usp=sharing" target="_blank">Acesse Aqui</a>
                 </div>
 
             </div>
